--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ngxpert/hot-toast": "^4.1.2",
     "@primeng/themes": "^19.0.9",
     "@tailwindcss/postcss": "^4.0.10",
     "bn-ng-idle": "^2.0.5",
