feat: :sparkles: mejorar estructura nuevo proyecto Angular
mejorar estructura nuevo proyecto Angular

mejorar estructura nuevo proyecto Angular

--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "@ngxpert/hot-toast": "^4.1.2",
     "@primeng/themes": "^19.0.9",
     "@tailwindcss/postcss": "^4.0.10",
+    "@types/luxon": "^3.6.2",
     "bn-ng-idle": "^2.0.5",
+    "crypto-js": "^4.2.0",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
+    "luxon": "^3.6.1",
     "material-symbols": "^0.29.0",
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
@@ -36,8 +41,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.0",
-    "@angular/cli": "^19.2.0",
+    "@angular/cli": "^19.2.8",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
