--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "start": "npx ng serve --configuration=development",
+    "start:dev": "npx ng serve --configuration=development",
     "start:test": "npx ng serve --configuration=test",
     "start:prod": "npx ng serve --configuration=production",
     "build:test": "node --max_old_space_size=100000 node_modules/@angular/cli/bin/ng build --aot --configuration=test",
