--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@types/luxon": "^3.6.2",
     "bn-ng-idle": "^2.0.5",
+    "chart.js": "^4.5.0",
     "crypto-js": "^4.2.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
