--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postcss": "^8.5.3",
     "primeicons": "^7.0.0",
     "primeng": "^20.0.0",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.2",
     "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11",
