feat: :lipstick: re-factorizar carpeta de estilos de sass
re-factorizar carpeta de estilos de sass

re-factorizar carpeta de estilos de sass

--- a/angular.json
+++ b/angular.json
@@ -44,9 +44,7 @@
             "outputPath": "dist/front",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -58,7 +56,7 @@
             ],
             "styles": [
               "src/style/styles.scss",
-              "src/style/tailwind.css",
+              "src/style/global/library/tailwind.css",
               "node_modules/sweetalert2/src/sweetalert2.scss"
             ],
             "scripts": []
@@ -131,10 +129,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -146,7 +141,7 @@
             ],
             "styles": [
               "src/style/styles.scss",
-              "src/style/tailwind.css"
+              "src/style/global/library/tailwind.css"
             ],
             "scripts": []
           }
